--- a/.travis.yml
+++ b/.travis.yml
@@ -28,3 +28,9 @@ after_success:
 
 notifications:
   email: false
+  webhooks:
+    urls:
+      - https://webhooks.gitter.im/e/aa8992fdb8cf0736101c
+    on_success: change  # options: [always|never|change] default: always
+    on_failure: always  # options: [always|never|change] default: always
+    on_start: never     # options: [always|never|change] default: always
