--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ install:
   - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION pytest pytest-cov
   - source activate test-environment
   - pip install codecov
+  - conda install -c rdkit rdkit
 
 script:
   - pip install -e .
