--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -16,6 +16,6 @@ formats: all
 python:
   version: 3.7
   install:
-    - requirements: requirements.txt
+    - requirements: ./requirements.txt
     - method: pip
   systemp_packages: true
